# ceinmsrt-plugin-twincat-cpp

./: CMakeLists.txt  README.md
VS_2013_project/CEINMS_Twincat/: CEINMS_Twincat.sdf.REMOVED.git-id  CEINMS_Twincat.sln
VS_2013_project/CEINMS_Twincat/CEINMS_Twincat/: CEINMS_Twincat.tsproj.bak  TrialLicense.tclrs
VS_2013_project/CEINMS_Twincat/CEINMS_Twincat/AdsTalker/: AdsTalker.tmc  AdsTalker.vcxproj  AdsTalkerServices.h
VS_2013_project/CEINMS_Twincat/CEINMS_Twincat/_Boot/TwinCAT RT (x64)/: CurrentConfig.xml
VS_2013_project/CEINMS_Twincat/CEINMS_Twincat/_Config/IO/: Device 1 (EtherCAT Slave).xti  Device 1 (EtherCAT Slave).xti.bak
VS_2013_project/CEINMS_Twincat/CEINMS_Twincat/_Deployment/TwinCAT RT (x64)/: AdsTalker.sys
include/: PluginPositionAndTorqueTwinCat.h
src/: CMakeLists.txt  PluginPositionAndTorqueTwinCat.cpp  TestAds.cpp
